--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,3 @@
 {
-    "editor.tabSize": 4,
-    "tailwindCSS.includeLanguages": {
-        "javascript": "javascript",
-        "html": "HTML"
-    },
-    "editor.quickSuggestions": {
-        "strings": true
-    }
+    "editor.tabSize": 4
 }
