first draft of build slice feature

--- a/extento/config/tsconfig.json
+++ b/extento/config/tsconfig.json
@@ -28,6 +28,9 @@
             ],
             "@app/*": [
                 "../../src/*"
+            ],
+            "@config": [
+                "../../src/config.ts"
             ]
         }
     },
