--- a/src/extento.config.json
+++ b/src/extento.config.json
@@ -1,6 +1,30 @@
 {
     "order": {
-        "__template__": 10000000
+        "tester": 10000000,
+        "manager": 10000001,
+        "candidate": 10000002,
+        "admin": 10000003,
+        "devops": 10000004
+    },
+    "builds": {
+        "QA": [
+            "tester",
+            "candidate"
+        ],
+        "BOSS": [
+            "manager",
+            "admin"
+        ],
+        "NEW_GUY": [
+            "devops",
+            "candidate"
+        ],
+        "CEO": [
+            "admin",
+            "candidate",
+            "manager",
+            "tester"
+        ]
     },
     "source_repo": "",
     "source_commit_hash": ""
