--- a/src/workspaces/admin/tsconfig.json
+++ b/src/workspaces/admin/tsconfig.json
@@ -1,13 +1,11 @@
 {
-    "extends": "../extento/config/tsconfig.json",
+    "extends": "../../../extento/config/tsconfig.json",
     "compilerOptions": {
         "composite": true,
         "declaration": true
     },
     "include": [
-        "./config.ts",
-        "../**/*",
-        "../**/*.json"
+        "../../../**/*"
     ],
     "exclude": ["node_modules"]
 }
