--- a/package.json
+++ b/package.json
@@ -6,16 +6,9 @@
         "npm": "8.15.0",
         "node": "18.7.0"
     },
-    "workspaces": [
-        "src",
-        "extento/codegen",
-        "extento/entries",
-        "extento/library",
-        "extento/config"
-    ],
     "scripts": {
-        "start": "npm run start --workspace=src",
-        "build": "npm run build --workspace=src",
+        "start": "npx webpack --config ./extento/config/webpack.development.js --watch",
+        "build": "npx webpack --config ./extento/config/webpack.production.js",
         "change": "ls"
     },
     "devDependencies": {
