--- a/workspaces/admin/tsconfig.json
+++ b/workspaces/admin/tsconfig.json
@@ -1,11 +1,11 @@
 {
-    "extends": "../../../extento/config/tsconfig.json",
+    "extends": "../../extento/config/tsconfig.json",
     "compilerOptions": {
         "composite": true,
         "declaration": true
     },
     "include": [
-        "../../../**/*"
+        "../../**/*"
     ],
     "exclude": ["node_modules"]
 }
