more tsconfig work

--- a/.extento/codegen/tsconfig.json
+++ b/.extento/codegen/tsconfig.json
@@ -6,7 +6,8 @@
     },
     "include": [
         "../../**/*",
-        "../../**/*.json"
+        "../../**/*.json",
+        ".extento"
     ],
     "exclude": ["node_modules"]
 }
