--- a/workspaces/candidate/tsconfig.json
+++ b/workspaces/candidate/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "../../extento/config/tsconfig.json",
+    "extends": "../../.extento/config/tsconfig.json",
     "compilerOptions": {
         "composite": true,
         "declaration": true
