--- a/.extento/entries/tsconfig.extento.json
+++ b/.extento/entries/tsconfig.extento.json
@@ -4,9 +4,5 @@
         "composite": true,
         "declaration": true
     },
-    "include": [
-        "../../**/*",
-        "../../**/*.json"
-    ],
-    "exclude": ["node_modules"]
+    "include": ["../../**/*", "../../.extento/**/*", "../../**/*.json"]
 }
