--- a/.extento/config/tsconfig.json
+++ b/.extento/config/tsconfig.json
@@ -11,26 +11,30 @@
             "chrome",
             "node"
         ],
+        "outDir": "../../dist/",
         "baseUrl": ".",
         "rootDir": "../../",
         "paths": {
-            "@workspaces/*": [
+            "@_gen/*": [
+                "../codegen/src/*"
+            ],
+            "@_workspace/*": [
                 "../../workspaces/*"
             ],
-            "@browser/*": [
+            "@app/browser/*": [
                 "../../browser/*"
             ],
-            "@shared": [
+            "@app/shared": [
                 "../../shared/index.ts"
             ],
-            "@shared/*": [
+            "@app/shared/*": [
                 "../../shared/*"
             ],
-            "@extento/*": [
-                "../library/src/*"
+            "@extento/lib/*": [
+                "../lib/src/*"
             ],
-            "@codegen/*": [
-                "../codegen/src/*"
+            "@extento/types": [
+                "../types/index.ts"
             ]
         }
     },
