--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
 {
-    "extends": "./.extento/config/tsconfig.json"
+    "extends": "./.extento/config/tsconfig.json",
+    "exclude": ["node_modules"]
 }
