--- a/.extento/config/tsconfig.json
+++ b/.extento/config/tsconfig.json
@@ -11,9 +11,12 @@
             "chrome",
             "node"
         ],
-        "noEmit": true,
+        "composite": true,
+        "outDir": "../../dist/",
         "baseUrl": ".",
         "rootDir": "../../",
+        "declaration": true,
+        "declarationMap": true,
         "paths": {
             "@_gen/*": [
                 "../codegen/src/*"
@@ -22,7 +25,7 @@
                 "../../workspaces/*"
             ],
             "@app/browser/*": [
-                "../../browser/*"
+                "../../browser/lib/*"
             ],
             "@app/shared": [
                 "../../shared/index.ts"
@@ -38,10 +41,19 @@
             ]
         }
     },
-    "include": [
-        "../**/*",
-        "../../.extento/**/*"
+    "references": [
+        {"path": "../entries/tsconfig.json"},
+        {"path": "../../browser/tsconfig.json"}
     ],
-    "exclude": ["node_modules", "../../chrome-v3", "./**/*"],
+    "include": [
+        "../codegen",
+        "../entries",
+        "../library",
+        "../types",
+        "../../workspaces",
+        "../../browser",
+        "../../shared"
+    ],
+    "exclude": ["node_modules", "../../chrome-v3", "./**/*", "../../dist"],
     "files": ["./typings.d.ts"]
 }
