--- a/.extento/config/tsconfig.json
+++ b/.extento/config/tsconfig.json
@@ -1,59 +1,16 @@
 {
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "noImplicitAny": true,
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "moduleResolution": "node",
-        "target": "esnext",
-        "jsx": "react",
-        "types": [
-            "chrome",
-            "node"
-        ],
-        "composite": true,
-        "outDir": "../../dist/",
-        "baseUrl": ".",
-        "rootDir": "../../",
-        "declaration": true,
-        "declarationMap": true,
-        "paths": {
-            "@_gen/*": [
-                "../codegen/src/*"
-            ],
-            "@_workspace/*": [
-                "../../workspaces/*"
-            ],
-            "@app/browser/*": [
-                "../../browser/lib/*"
-            ],
-            "@app/shared": [
-                "../../shared/index.ts"
-            ],
-            "@app/shared/*": [
-                "../../shared/*"
-            ],
-            "@extento/lib/*": [
-                "../library/src/*"
-            ],
-            "@extento/types": [
-                "../types/index.ts"
-            ]
-        }
+        "outDir": "../../.project/",
+        "rootDir": "../entries",
+        "composite": true
     },
-    "references": [
-        {"path": "../entries/tsconfig.json"},
-        {"path": "../../browser/tsconfig.json"}
+    "files": [
+        "../entries/src/background.ts",
+        "../entries/src/browser.tsx",
+        "../entries/src/content_script.ts",
+        "../entries/src/onload.ts",
+        "../entries/src/ui.tsx"
     ],
-    "include": [
-        "../codegen",
-        "../entries",
-        "../library",
-        "../types",
-        "../../workspaces",
-        "../../browser",
-        "../../shared"
-    ],
-    "exclude": ["node_modules", "../../chrome-v3", "./**/*", "../../dist"],
-    "files": ["./typings.d.ts"]
+    "exclude": ["node_modules"]
 }
