--- a/browser/tsconfig.json
+++ b/browser/tsconfig.json
@@ -1,15 +1,16 @@
 {
     "extends": "../.extento/config/tsconfig.base.json",
     "compilerOptions": {
-        "composite": true
+        "composite": true,
+        "outdir": "./dist"
     },
     "include": [
         ".",
         "../.extento/codegen",
-        "../.extento/api",
         "../.extento/types"
     ],
     "references": [
-        { "path": "../shared" }
+        { "path": "../shared" },
+        { "path": "../.extento/api" }
     ]
 }
