project references seem to work

--- a/.extento/api/tsconfig.json
+++ b/.extento/api/tsconfig.json
@@ -2,15 +2,19 @@
     "extends": "../config/tsconfig.base.json",
     "compilerOptions": {
         "composite": true,
-        "outdir": "./dist"
+        "outDir": "./tsconfig.dist",
+        "baseUrl": "../config"
     },
     "include": [
         ".",
         "../codegen",
-        "../types"
+        "../types",
+        "../../workspaces",
+        "../../workspaces/**/*.json"
     ],
+    "files": [],
     "references": [
-        { "path": "../core" },
-        { "path": "../../workspaces" }
-    ]
+        { "path": "../core" }
+    ],
+    "exclude": ["dist", "node_modules"]
 }
