--- a/.extento/entries/tsconfig.json
+++ b/.extento/entries/tsconfig.json
@@ -2,15 +2,17 @@
     "extends": "../config/tsconfig.base.json",
     "compilerOptions": {
         "composite": true,
-        "outdir": "./dist"
+        "outDir": "./tsconfig.dist"
     },
     "include": [
         ".",
         "../codegen",
-        "../api",
         "../types"
     ],
+    "files": [],
     "references": [
-        { "path": "../../browser" }
-    ]
+        { "path": "../../browser" },
+        { "path": "../api" }
+    ],
+    "exclude": ["dist", "node_modules"]
 }
