--- a/workspaces/tsconfig.json
+++ b/workspaces/tsconfig.json
@@ -2,16 +2,16 @@
     "extends": "../.extento/config/tsconfig.base.json",
     "compilerOptions": {
         "composite": true,
-        "outdir": "./dist"
+        "outDir": "./tsconfig.dist"
     },
     "include": [
         ".",
         "./**/*.json",
-        "../.extento/codegen",
         "../.extento/types"
     ],
+    "files": [],
     "references": [
-        { "path": "../shared" },
         { "path": "../.extento/api" }
-    ]
+    ],
+    "exclude": ["dist", "node_modules"]
 }
