--- a/.extento/package.json
+++ b/.extento/package.json
@@ -49,6 +49,7 @@
         "style-loader": "^3.3.1",
         "tailwindcss": "^3.2.4",
         "terser-webpack-plugin": "^5.3.6",
+        "to-string-loader": "^1.2.0",
         "ts-loader": "^9.4.1",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
         "typescript": "^4.7.4",
