--- a/.extento/package.json
+++ b/.extento/package.json
@@ -9,33 +9,21 @@
     "scripts": {
         "start": "npx webpack --config ./config/webpack.development.js --watch",
         "build": "npx webpack --config ./config/webpack.production.js",
-        "lint": "npx eslint ../workspaces ../shared ../browser"
+        "lint": "npx eslint ../workspaces ../shared ../pages"
     },
     "devDependencies": {
-        "@tailwindcss/aspect-ratio": "^0.4.2",
-        "@tailwindcss/container-queries": "^0.1.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@tailwindcss/line-clamp": "^0.4.2",
-        "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
-        "@tailwindcss/typography": "^0.5.8",
         "@types/chrome": "^0.0.195",
         "@types/lodash": "^4.14.190",
         "@types/node": "^18.6.5",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.9",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.45.1",
-        "@typescript-eslint/parser": "^5.45.1",
+        "@typescript-eslint/eslint-plugin": "^5.46.0",
+        "@typescript-eslint/parser": "^5.46.0",
         "ajv": "^8.11.2",
-        "autoprefixer": "^10.4.8",
         "css-loader": "^6.7.2",
         "eslint": "^8.29.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.11",
-        "eslint-plugin-react-hooks": "^4.6.0",
         "fs-extra": "^10.1.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
@@ -47,14 +35,15 @@
         "react-dom": "^18.2.0",
         "serialize-error": "^11.0.0",
         "style-loader": "^3.3.1",
-        "tailwindcss": "^3.2.4",
         "terser-webpack-plugin": "^5.3.6",
+        "to-string-loader": "^1.2.0",
         "ts-loader": "^9.4.1",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
-        "typescript": "^4.7.4",
+        "typescript": "^4.9.4",
         "uuid": "^9.0.0",
         "webpack": "^5.75.0",
         "webpack-cli": "^4.10.0",
-        "webpack-merge": "^5.8.0"
+        "webpack-merge": "^5.8.0",
+        "webpack-watch-files-plugin": "^1.2.1"
     }
 }
