doing dangerous stuff to source

--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,6 @@ tmp/
 .env
 .env.*
 
-# Standard practice for adding empty dirs to version control.
-# You can add a .gitignore to any empty directory and it gets 
-# included in the next commit.
-!.gitignore
-
 # generated
 .extento/codegen/*
 
@@ -32,4 +27,11 @@ icons/*/*
 # only include RELEASE builds in VC
 builds/*.DEV*
 
+.archive/*
+
 *.pem
+
+# Standard practice for adding empty dirs to version control.
+# You can add a .gitignore to any empty directory and it gets 
+# included in the next commit.
+!.gitignore
