--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "workspaces": [
         ".extento",
-        "dev.scripts"
+        ".dev/scripts"
     ],
     "scripts": {
         "start": "npm run start --workspace=.extento",
@@ -18,11 +18,11 @@
         "build:dev": "npm run build:dev --workspace=.extento",
         "build-all:dev": "npm run build-all:dev --workspace=.extento",
         "lint": "npm run lint --workspace=.extento",
-        "dev:swap:dev": "LAYER=dev node dev.scripts/use_layer.js",
-        "dev:swap:demo": "LAYER=demo node dev.scripts/use_layer.js",
-        "dev:swap:template": "LAYER=template node dev.scripts/use_layer.js",
-        "dev:docs": "npm run docs --workspace=dev.scripts",
-        "dev:sync_docs": "npm run sync_docs --workspace=dev.scripts"
+        "dev:swap:dev": "LAYER=dev npm run swap_space --workspace=.dev/scripts",
+        "dev:swap:demo": "LAYER=demo npm run swap_space --workspace=.dev/scripts",
+        "dev:swap:template": "LAYER=template npm run swap_space --workspace=.dev/scripts",
+        "dev:docs": "npm run docs --workspace=.dev/scripts",
+        "dev:sync_docs": "npm run sync_docs --workspace=.dev/scripts"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.8",
