--- a/layers/badger/manifest.json
+++ b/layers/badger/manifest.json
@@ -2,13 +2,15 @@
     "permissions": {
         "inherit": false,
         "value": [
-
+            "storage",
+            "alarms",
+            "notifications"
         ]
     },
     "matches": {
         "inherit": false,
         "value": [
-            
+            "<all_urls>"
         ]
     }
 }
