--- a/package.json
+++ b/package.json
@@ -25,24 +25,27 @@
         "dev:sync_docs": "npm run sync_docs --workspace=.dev/scripts"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.8",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/container-queries": "^0.1.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
         "@tailwindcss/typography": "^0.5.8",
-        "tailwindcss": "^3.2.4"
+        "autoprefixer": "^10.4.8",
+        "tailwindcss": "^3.2.4",
+        "uuid": "^9.0.0"
     },
     "extento": {
         "manifest": {
-            "name": "__name__",
-            "version": "0.0.0",
+            "name": "Trusted Nursing Interview",
+            "version": "0.0.1",
             "allowed_extensions": []
         },
         "ui_ordering": [
-            "__template__"
+            "badger"
         ],
-        "selective_builds": {}
+        "selective_builds": {
+            
+        }
     }
 }
