--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
         "@tailwindcss/typography": "^0.5.8",
         "autoprefixer": "^10.4.8",
+        "react-query": "^3.39.2",
         "tailwindcss": "^3.2.4",
         "uuid": "^9.0.0"
     },
@@ -44,8 +45,6 @@
         "ui_ordering": [
             "badger"
         ],
-        "selective_builds": {
-            
-        }
+        "selective_builds": {}
     }
 }
