--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "dev:sync_docs": "npm run sync_docs --workspace=.dev/scripts"
     },
     "devDependencies": {
+        "@headlessui/react": "^1.7.7",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/container-queries": "^0.1.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -34,6 +35,7 @@
         "autoprefixer": "^10.4.8",
         "react-query": "^3.39.2",
         "tailwindcss": "^3.2.4",
+        "usehooks-ts": "^2.9.1",
         "uuid": "^9.0.0"
     },
     "extento": {
