--- a/.extento/api/tsconfig.json
+++ b/.extento/api/tsconfig.json
@@ -1,5 +1,17 @@
 {
     "extends": "../../tsconfig.json",
+    "include": [
+        "../../layers/**/*",
+        "../../layers/**/*.json",
+        "../../pages/**/*",
+        "../../pages/**/*.json",
+        "../../shared/**/*",
+        "../../shared/**/*.json",
+        "../codegen/**/*",
+        "../codegen/**/*.json",
+        "./public/**/*",
+        "./internal/**/*"
+    ],
     "references": [
         { "path": "../core" },
         { "path": "../types" },
