--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "dev:sync_docs": "npm run sync_docs --workspace=.dev/scripts"
     },
     "devDependencies": {
-        "@headlessui/react": "^1.7.7",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/container-queries": "^0.1.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -33,6 +32,8 @@
         "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
         "@tailwindcss/typography": "^0.5.8",
         "autoprefixer": "^10.4.8",
+        "daisyui": "^2.45.0",
+        "dayjs": "^1.11.7",
         "react-query": "^3.39.2",
         "tailwindcss": "^3.2.4",
         "usehooks-ts": "^2.9.1",
