--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
         "build:dev": "npm run build:dev --workspace=.extento",
         "build-all:dev": "npm run build-all:dev --workspace=.extento",
         "lint": "npm run lint --workspace=.extento",
+        "dev:pre_commit": "npm run pre_commit --workspace=.dev/scripts",
         "dev:swap:dev": "SPACE=dev npm run swap_space --workspace=.dev/scripts",
         "dev:swap:demo": "SPACE=demo npm run swap_space --workspace=.dev/scripts",
         "dev:swap:template": "SPACE=template npm run swap_space --workspace=.dev/scripts",
         "dev:docs": "npm run docs --workspace=.dev/scripts",
-        "dev:sync_docs": "npm run sync_docs --workspace=.dev/scripts"
+        "dev:sync_docs": "npm run sync_docs --workspace=.dev/scripts",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@tailwindcss/aspect-ratio": "^0.4.2",
@@ -32,21 +34,17 @@
         "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
         "@tailwindcss/typography": "^0.5.8",
         "autoprefixer": "^10.4.8",
-        "daisyui": "^2.45.0",
-        "dayjs": "^1.11.7",
-        "react-query": "^3.39.2",
-        "tailwindcss": "^3.2.4",
-        "usehooks-ts": "^2.9.1",
-        "uuid": "^9.0.0"
+        "husky": "^8.0.2",
+        "tailwindcss": "^3.2.4"
     },
     "extento": {
         "manifest": {
-            "name": "Trusted Nursing Interview",
-            "version": "0.0.1",
+            "name": "__name__",
+            "version": "0.0.0",
             "allowed_extensions": []
         },
         "ui_ordering": [
-            "badger"
+            "__template__"
         ],
         "selective_builds": {}
     }
